* (bug 11555) Make editsection links come after section seadlines. This has no visible effect to graphical browsers,   but fixes the issue that headlines look like "[edit] Headline" in text browsers.

--- a/skins/monobook/Opera7Fixes.css
+++ b/skins/monobook/Opera7Fixes.css
@@ -9,3 +9,8 @@
 	background: url(external.png) center right no-repeat;
 	padding-right: 13px;
 }
+/* Edit section links */
+.editsection {
+	margin-top: 0;
+}
+
